--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 
 </head>
 <body>
+    <p>Click anywhere on screen to enable sound</p>
+
     <main>
         <div class="circle">
             <div class="op"></div>
         </div>
+        
     </main>
 
     <audio id="background-audio" loop>
